--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-file-reader-app",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A file reader Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . electron-file-reader-app --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"File Reader\"",
+    "package-linux": "electron-packager . electron-file-reader-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/icon.png --prune=true --out=release-builds"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "NCH",
+  "license": "",
   "devDependencies": {
-    "electron": "^7.1.11"
+    "electron": "^7.1.11",
+    "electron-packager": "^14.2.0"
   },
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2"
   }
 }
